--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
 
   mysql:
     image: mysql:8
+    container_name: kitabghar2-mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: Mysql17?
@@ -28,6 +29,7 @@ services:
       - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      - ./backend/init.sql:/docker-entrypoint-initdb.d/init.sql
 
 volumes:
   mysql_data:
